# crosswords

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  Makefile  README.md  cnn_builder.py  cnn_model.py  compose.external-teacher.yaml  compose.yaml  dataset.jsonl  flake.nix  index.html  letter_clf.pkl  migrate_legacy_dataset.py  package-lock.json  package.json  sample_store.py  server.py  train_cnn_server.py  train_svm_server.py  trainer_1.py  vite.config.ts
.direnv/: flake-profile-3-link  flake-profile-4-link
.github/workflows/: release.yml
ai/: Containerfile  train_cnn.py  train_loop.py  train_svm.py  training_data.py
app/: Containerfile  index.html  package.json
app/src/: App.tsx  vite-env.d.ts
app/src/components/: DrawingCanvas.tsx  Grid.tsx  HandwritingPanel.tsx  Settings.tsx  SuggestionBubble.tsx  SuggestionStrokes.tsx  Toast.tsx
app/src/store/: useGameStore.ts
app/src/utils/: api.ts  generator.ts  handwritingSession.ts
data/: data_format.json
data/high_quality/: high_quality-0001.jsonl
data/regular/: regular-0001.jsonl
data_new/: data_format.json
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: app.yaml
deploy/scripts/: package-assets.sh
docs/: ai.md  app.md  architecture.md  data.md  infrastructure.md  server.md
litellm/: .env-example  config.yaml
rust/handwriting_core/: Cargo.toml
rust/handwriting_core/src/: lib.rs
src/: App.tsx  index.css  types.ts
src/app/: Containerfile  Containerfile.release  entrypoint.sh  index.html  package-lock.json  package.json  release-server.mjs
src/app/public/: env-config.js
src/app/src/: App.tsx  vite-env.d.ts
src/app/tests/: handwriting.core.test.ts
src/components/: Cell.tsx  DrawingCanvas.tsx  Grid.tsx  Settings.tsx  SuggestionBubble.tsx  Toast.tsx
src/core/: Cargo.toml
src/core/src/: dataset.rs  features.rs  knn.rs  lib.rs  logger.rs  main.rs  svm.rs  types.rs
src/core/src/algorithm/centroid/: centroid.rs
src/core/src/algorithm/svm/: svm.rs
src/core/src/cnn/: mod.rs  model.rs  train.rs  wasm.rs
src/core/src/data/: mod.rs  pipeline.rs
src/core/src/data/bridge/: batcher.rs
src/core/src/data/dataset/: dataset.rs
src/core/src/data/preproc/: mod.rs  raster.rs  sequence.rs  spatial.rs  svm.rs  temporal.rs
src/core/src/metrics/: metrics.rs
src/core/ui/: Containerfile  package.json  vite.config.ts
src/core/ui/public/datasets/: hq-0001.jsonl  inputted-hq-0001.jsonl  inputted-regular-0004.jsonl  manifest.json  regular-0002.jsonl  regular-0003.jsonl  regular-0004.jsonl
src/core/ui/src/: App.tsx  onnxruntime-web.d.ts  styles.css
src/core/ui/src/lib/: aggregate.ts  canvas.ts  cnnAdapter.ts  datasets.ts  metrics.ts  recognition.ts  storage.ts  types.ts  wasmCore.ts
src/core/ui/src/test/: core-lab.test.ts
src/data/: en.json
src/ml/: Containerfile  cnn_model.py  evaluate_models.py  generate_handwriting_artifacts.py  train_cnn.py  train_loop.py  training_data.py
src/scripts/data_annotation/: auto_annotate.py
src/scripts/data_miggrate/: migrate_dataset_0.0.1.py
src/scripts/pipelines/: auto_anotate_data.py  migrate_legacy.py  (+1 more)
src/srv/: server.py
src/store/: useGameStore.ts
src/utils/: api.ts  generator.ts  preprocessing.ts  validation.ts
srv/: Containerfile  server.py
tests/: test_data_pipeline.py
to-fix/app/: Containerfile  Containerfile.release  package.json
to-fix/ml/: generate_handwriting_artifacts.py  train_loop.py  train_svm.py
to-fix/srv/: Containerfile
(+61 files in other folders)
