[package]
name = "handwriting_core"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.21", features = ["ndarray", "store"] }
burn-store = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn = { version = "0.21", features = ["train", "wgpu"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"

[lib]
name = "handwriting_core"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "core"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
