[package]
name = "handwriting_core"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "ndarray", "store"] }
burn-store = { version = "0.21", default-features = false, features = ["std", "safetensors"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn = { version = "0.21", default-features = false, features = ["autodiff"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = []
gpu = ["burn/wgpu"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "wasm-bindgen-futures"]

[lib]
name = "handwriting_core"
crate-type = ["rlib"]

[[bin]]
name = "core"
path = "src/main.rs"

[profile.release]
lto = false
opt-level = 3
codegen-units = 16
incremental = true
strip = true
