[package]
name = "handwriting_core"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "ndarray", "store"], optional = true }
burn-store = { version = "0.21", default-features = false, features = ["std", "safetensors"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"], optional = true }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = []
cnn = ["dep:burn", "dep:burn-store", "dep:rand", "burn/autodiff"]
gpu = ["cnn", "burn/wgpu"]
wasm = ["cnn", "dep:wasm-bindgen", "dep:js-sys", "dep:getrandom", "dep:getrandom_04", "wasm-bindgen-futures"]

[lib]
name = "handwriting_core"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "core"
path = "src/main.rs"
required-features = ["cnn"]

[profile.release]
lto = false
opt-level = 3
codegen-units = 16
incremental = true
strip = true
